src/objects/Capability_Matrix__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <formula>CCV__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCV__c</fullName>
        <label>CCV</label>
        <referenceTo>CCV__c</referenceTo>
        <relationshipLabel>Capability Matrix</relationshipLabel>
        <relationshipName>Capability_Matrix</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Assigned__c</fullName>
        <formula>ISBLANK(CCV__r.Opportunity__c) = FALSE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Assigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <label>Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>People__c</fullName>
        <label>People</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Products_Services__c</fullName>
        <label>Products / Services</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Programs__c</fullName>
        <label>Programs</label>
        <type>TextArea</type>
    </fields>
    <label>Capability Matrix</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Capability Matrix</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Capability Matrix</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>